content and meta service integration

--- a/app/templates/create_content.html
+++ b/app/templates/create_content.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="container">
 
-    <h7><a href="/">Home</a> &raquo; <a href="/content">Content Service</a> &raquo; Add Content</h5>
+    <h7><a href="/">Home</a> &raquo; <a href="/seo/content">Content Service</a> &raquo; Add Content</h5>
 
-    <h3>Add content!</h3><br>
+    <h3>Add Content!</h3><br>
 
     <form action="{{ url }}" method="post" target="_blank">
         URL*</label> <input class="form-control" type="text" name="url" required><br>
