--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -26,6 +26,12 @@
                         <li><a href="/seo/content/add_content">Add Content</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="/seo/meta">Meta Service<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/seo/meta/add_meta_data">Add Meta Data</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
