--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <div class="page-header">
-        <p>{{ message }}</p>
+        <font color="{{ message_color }}">{{ message }}</font>
     </div>
 </div>
 {% endblock %}
