--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -32,6 +32,12 @@
                         <li><a href="/seo/meta/add_meta_data">Add Meta Data</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="/seo/keyword">Keyword Service<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/seo/keyword/keywordtool">Get Google Suggestions</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
