integrating google suggest

--- a/app/templates/keyword_data.html
+++ b/app/templates/keyword_data.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="container">
 
-    <h7><a href="/">Home</a> &raquo; <a href="/seo/keyword">Keyword Service</a> &raquo; Get Google Suggestions</h5>
+    <h7><a href="/">Home</a> &raquo; <a href="/seo/keyword">Keyword Service</a> &raquo; KeywordTool Data</h5>
 
-    <h3>Get Google Suggestions!</h3><br>
+    <h3>Get KeywordTool Data: Google Suggestions!</h3><br>
 
     <form method="get">
         Keyword*</label> <input class="form-control" type="text" name="keyword" required><br>
