--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -35,7 +35,8 @@
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="/seo/keyword">Keyword Service<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/seo/keyword/keywordtool">Get Google Suggestions</a></li>
+                        <li><a href="/seo/keyword/keywordtool">KeywordTool Data</a></li>
+                        <li><a href="/seo/keyword/google_suggest">Get Google Suggestions</a></li>
                     </ul>
                 </li>
             </ul>
