adding text to html convert help

--- a/app/templates/create_content.html
+++ b/app/templates/create_content.html
@@ -11,7 +11,8 @@
         URL*</label> <input class="form-control" type="text" name="url" required><br>
         Short Description<textarea class="form-control" rows="4" name="short_description"></textarea><br>
         Content Header<input class="form-control" type="text" name="content_header"><br>
-        Content*<textarea class="form-control" rows="8" name="content" required></textarea><br>
+        Content* (Use <a href='http://www.textfixer.com/html/convert-text-html.php' target='_blank'>this</a> to convert your text to HTML. <b>Note</b>: Use line break tags only!)<textarea class="form-control" rows="8" name="content" required></textarea>
+        Wondering how your content will look like? Check it <a href='http://scratchpad.io/' target='_blank'>here</a>.<br><br>
         <input class="form-control" type="submit" value="Submit">
     </form>
 
