adding default null json

--- a/app/templates/create_meta.html
+++ b/app/templates/create_meta.html
@@ -38,11 +38,11 @@
         
         Meta Keywords<textarea class="form-control" rows="4" name="meta_keywords"></textarea><br>
         
-        OG Tags (This should be a valid json. Validate <a href="http://jsonlint.com/">here</a>)<textarea class="form-control" rows="8" name="og_tags"></textarea><br>
+        OG Tags (This should be a valid json. Validate <a href="http://jsonlint.com/">here</a>)<textarea class="form-control" rows="8" name="og_tags">{}</textarea><br>
         
-        Twitter Cards (This should be a valid json. Validate <a href="http://jsonlint.com/">here</a>)<textarea class="form-control" rows="8" name="twitter_cards"></textarea><br>
+        Twitter Cards (This should be a valid json. Validate <a href="http://jsonlint.com/">here</a>)<textarea class="form-control" rows="8" name="twitter_cards">{}</textarea><br>
         
-        G+ Tags / Micro Data (This should be a valid json. Validate <a href="http://jsonlint.com/">here</a>)<textarea class="form-control" rows="8" name="gplus_tags"></textarea><br>
+        G+ Tags / Micro Data (This should be a valid json. Validate <a href="http://jsonlint.com/">here</a>)<textarea class="form-control" rows="8" name="gplus_tags">{}</textarea><br>
         
         <input class="form-control" type="submit" value="Submit">
     </form>
