adding value attributes for drop down page type

--- a/app/templates/create_meta.html
+++ b/app/templates/create_meta.html
@@ -11,19 +11,19 @@
         
         Page Type</label>
         <select class="form-control" name="page_type">
-            <option name='url'>URL</option>
-            <option name='ads-city'>Ads City</option>
-            <option name='ads-city-category'>Ads City Category</option>
-            <option name='ads-details'>Ads Details</option>
-            <option name='deals-city'>Deals City</option>
-            <option name='deals-city-category'>Deals City Category</option>
-            <option name='deals-details'>Deals Details</option>
-            <option name='category-city'>Category City</option>
-        	<option name='category-location'>Category Location</option>
-            <option name='sub-category-city'>Sub Category City</option>
-            <option name='sub-category-location'>Sub Category Location</option>
-            <option name='business-listing'>Business Listing</option>   
-        	<option name='search'>Search</option>	
+            <option name='url' value='url'>URL</option>
+            <option name='ads-city' value='ads-city'>Ads City</option>
+            <option name='ads-city-category' value='ads-city-category'>Ads City Category</option>
+            <option name='ads-details' value='ads-details'>Ads Details</option>
+            <option name='deals-city' value='deals-city'>Deals City</option>
+            <option name='deals-city-category' value='deals-city-category'>Deals City Category</option>
+            <option name='deals-details' value='deals-details'>Deals Details</option>
+            <option name='category-city' value='category-city'>Category City</option>
+        	<option name='category-location' value='category-location'>Category Location</option>
+            <option name='sub-category-city' value='sub-category-city'>Sub Category City</option>
+            <option name='sub-category-location' value='sub-category-location'>Sub Category Location</option>
+            <option name='business-listing' value='business-listing'>Business Listing</option>   
+        	<option name='search' value='search'>Search</option>	
         </select><br>
         
         URL (Fill it iff You've Chosen 'URL' as Page Type)<input class="form-control" type="text" name="url"><br>
