custom pages integration

--- a/app/templates/create_meta.html
+++ b/app/templates/create_meta.html
@@ -23,7 +23,9 @@
             <option name='sub-category-city' value='sub-category-city'>Sub Category City</option>
             <option name='sub-category-location' value='sub-category-location'>Sub Category Location</option>
             <option name='business-listing' value='business-listing'>Business Listing</option>   
-        	<option name='search' value='search'>Search</option>	
+            <option name='search' value='search'>Search</option>    
+            <option name='search-city' value='search-city'>Search City</option>    
+            <option name='search-location' value='search-location'>Search Location</option>    
         </select><br>
         
         URL (Fill it iff You've Chosen 'URL' as Page Type)<input class="form-control" type="text" name="url"><br>
