--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -39,6 +39,20 @@
                         <li><a href="/seo/keyword/google_suggest">Get Google Suggestions</a></li>
                     </ul>
                 </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="/seo/mapper">Mapper Service<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/seo/mapper/create_custom_landing_page">Create Custom Landing Page</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="/seo/redis">Redis Service<span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="/seo/redis/meta_data">Push Meta Data to Redis</a></li>
+                        <li><a href="/seo/redis/content_data">Push Content Data to Redis</a></li>
+                        <li><a href="/seo/redis/mapper_data">Push Mapper Data to Redis</a></li>
+                    </ul>
+                </li>
             </ul>
         </div>
     </div>
