--- a/app/templates/test.html
+++ b/app/templates/test.html
@@ -8,7 +8,7 @@
 </div>
 
 <div>
-	<input class="form-control" placeholder="Type here.." type="text" data-autocomplete="{{'[' + ','.join(data) + ']'}}">
+	<label data-autocomplete="{{'[' + ','.join(data) + ']'}}">
 </div>
 
 <div class="form-control">
